# view-cue

./: .env.example  .gitignore  README.md  pyproject.toml
app/: config.py  main.py
app/api/routes/: answers.py  health.py  job_postings.py  reports.py  resumes.py  sessions.py
app/clients/: openai_client.py  supabase_client.py
app/core/: jobs.py
app/schemas/: metrics.py
app/services/: audio_metrics.py  llm_report.py  pipeline.py  stt.py  video_metrics.py
docs/: architecture.md
docs/api/: api-spec.md
docs/plan/: implementation-plan.md
tests/: test_health.py
