[project]
name = "view-cue"
version = "0.1.0"
requires-python = ">=3.12,<3.13"
dependencies = [
    "fastapi>=0.136.3",
    "librosa>=0.11.0",
    "mediapipe>=0.10.35",
    "numpy>=2.4.6",
    "openai>=2.41.0",
    "opencv-python-headless>=4.13.0.92",
    "praat-parselmouth>=0.4.7",
    "pydantic-settings>=2.14.1",
    "python-multipart>=0.0.32",
    "soundfile>=0.14.0",
    "supabase>=2.31.0",
    "uvicorn[standard]>=0.49.0",
    "webrtcvad-wheels>=2.0.14",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.4.0",
    "ruff>=0.15.16",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
